@@ -302,9 +302,12 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_event.html#set_grab>event.set_grab</a> - grab all input events<br>
 <a href=ref/pygame_event.html#wait>event.wait</a> - wait for an event<br>
 <a href=ref/pygame_font.html#Font>font.Font</a> - create a new font object<br>
+<a href=ref/pygame_font.html#SysFont>font.SysFont</a> -        create a pygame Font from system font resources<br>
 <a href=ref/pygame_font.html#get_default_font>font.get_default_font</a> - get the name of the default font<br>
 <a href=ref/pygame_font.html#get_init>font.get_init</a> - get status of font module initialization<br>
+<a href=ref/pygame_font.html#get_system_fonts>font.get_system_fonts</a> -        get a list of system font names<br>
 <a href=ref/pygame_font.html#init>font.init</a> - initialize the display module<br>
+<a href=ref/pygame_font.html#match_system_font>font.match_system_font</a> -        find the filename for the system font<br>
 <a href=ref/pygame_font.html#quit>font.quit</a> - uninitialize the font module<br>
 <a href=ref/pygame_image.html#fromstring>image.fromstring</a> - create a surface from a raw string buffer<br>
 <a href=ref/pygame_image.html#get_extended>image.get_extended</a> - returns true if SDL_image formats are available<br>
